Use full viewport height for layout if URL bar is locked shown or hidden.

With inert-top-controls turned on by default, we don't change the layout height
when the top controls are normally hidden. That is, if a user hides the URL bar
by scrolling, the page won't resize to use the newly available space. It'll lay
out as though the URL bar was still showing.

This patch makes an exception for cases where Chrome locks the URL bar in the
hidden state. e.g. Fullscreen or WebApp mode. In those cases, since the URL bar
can't be shown at all, there's no reason not to use the full height.

BUG=678649

Review-Url: https://codereview.chromium.org/2614993002
Cr-Commit-Position: refs/heads/master@{#441995}

Former-commit-id: 18940be9f2a3912efbdbed71863a7749ed243e9a